--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,34 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Background Geolocation
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <ion-button expnad="full" (click)="StartBackgroundTracking()">StartBackgroundTracking</ion-button> <br/>
+  <ion-button expnad="full" (click)="StopBackgroundGeolocation()">StopBackgroundGeolocation</ion-button> <br/>
+  <ion-button expnad="full" (click)="Geolocations()">Geolocations</ion-button> <br/>
+  <ion-button expnad="full" (click)=" ClearLocations()"> ClearLocations</ion-button> <br/>
+ 
+
+  <ion-list *ngFor="let location of locations">
+    <ion-item>
+      <ion-label><b>Latitude: {{location.latitude}}</b></ion-label>
+    </ion-item>
+
+    <ion-item>
+        <ion-label><b>Longitude: {{location.longitude}}</b></ion-label>
+    </ion-item>
+
+    <ion-item>
+        <ion-label><b>Speed: {{location.speed}}</b></ion-label>
+    </ion-item>
+
+    <ion-item>
+        <ion-label><b>Time: {{location.time}}</b></ion-label>
+    </ion-item>
+    
+  </ion-list>
 </ion-content>
