--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-button expnad="full" (click)="StartBackgroundTracking()">StartBackgroundTracking</ion-button> <br/>
+  <ion-button expnad="full" (click)="startTraking()">startTraking</ion-button> <br/>
   <ion-button expnad="full" (click)="StopBackgroundGeolocation()">StopBackgroundGeolocation</ion-button> <br/>
   <ion-button expnad="full" (click)="Geolocations()">Geolocations</ion-button> <br/>
   <ion-button expnad="full" (click)=" ClearLocations()"> ClearLocations</ion-button> <br/>
